--- a/HW1Revised/app/src/main/res/menu/delete_menu.xml
+++ b/HW1Revised/app/src/main/res/menu/delete_menu.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+ <item android:id="@+id/menu_profile"
+     android:title="Profile"
+     android:icon="@drawable/ic_baseline_portrait_24"
+     android:iconTint="@android:color/white"
+     app:showAsAction="ifRoom"/>
+
  <item android:id="@+id/menu_delete"
      android:title="Delete"
      android:icon="@drawable/ic_baseline_delete_24"
      android:iconTint="@android:color/white"
      app:showAsAction="ifRoom"/>
+
+
+
+
+
 </menu>
