--- a/HW1Revised/app/src/main/res/layout/fragment_update.xml
+++ b/HW1Revised/app/src/main/res/layout/fragment_update.xml
@@ -13,25 +13,57 @@
         android:id="@+id/UpdateReminder_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="72dp"
         android:ems="10"
         android:hint="The reminder message"
         android:inputType="textPersonName"
         android:text="@string/ReminderText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/UpdateButton"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <ImageView
+        android:id="@+id/imageUPreview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="TODO"
+        android:maxWidth="200dp"
+        android:maxHeight="200dp"
+        android:minWidth="200dp"
+        android:minHeight="200dp"
+        android:padding="8dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_baseline_image_24"
+        app:layout_constraintBottom_toTopOf="@id/loadUImage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/UpdateReminder_et" />
+
+    <Button
+        android:id="@+id/loadUImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update Reminder" />
+        android:layout_marginTop="48dp"
+        android:text="Choose image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageUPreview" />
+
+    <Button
+        android:id="@+id/UpdateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update Reminder"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loadUImage"
+        app:layout_constraintVertical_bias="0.747" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
