--- a/HW1Revised/app/src/main/res/layout/fragment_update.xml
+++ b/HW1Revised/app/src/main/res/layout/fragment_update.xml
@@ -13,16 +13,17 @@
         android:id="@+id/UpdateReminder_et"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="76dp"
         android:ems="10"
         android:hint="The reminder message"
         android:inputType="textPersonName"
         android:text="@string/ReminderText"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/micButton"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
-
 
     <ImageView
         android:id="@+id/imageUPreview"
@@ -64,6 +65,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loadUImage"
         app:layout_constraintVertical_bias="0.747" />
+
+    <ImageView
+        android:id="@+id/micButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="44dp"
+        android:backgroundTint="#F9F8FA"
+        android:padding="5dp"
+        android:src="@drawable/ic_baseline_mic_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/UpdateReminder_et"
+        android:clickable="true"
+        android:focusable="true"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
