--- a/Project/app/src/main/res/layout/fragment_update.xml
+++ b/Project/app/src/main/res/layout/fragment_update.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scrollViewUpdate"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="24dp"
     tools:context=".fragments.update.UpdateFragment">
 
@@ -31,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:adjustViewBounds="true"
-        android:contentDescription="TODO"
+        android:contentDescription="Select Image"
         android:maxWidth="200dp"
         android:maxHeight="200dp"
         android:minWidth="200dp"
@@ -49,7 +54,7 @@
         android:id="@+id/loadUImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="28dp"
         android:text="Choose image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,12 +64,12 @@
         android:id="@+id/UpdateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Update Reminder"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loadUImage"
-        app:layout_constraintVertical_bias="0.747" />
+        app:layout_constraintTop_toBottomOf="@+id/toggleUNotification" />
 
     <ImageView
         android:id="@+id/micButton"
@@ -81,5 +86,30 @@
         android:clickable="true"
         android:focusable="true"/>
 
+    <TextView
+        android:id="@+id/setUTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:hint="Set Notification time"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loadUImage" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/toggleUNotification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Show Notification"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/setUTimer" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
