--- a/Project/app/src/main/res/layout/fragment_select_loc.xml
+++ b/Project/app/src/main/res/layout/fragment_select_loc.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/selectLoc"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".fragments.list.SelectLocFragment">
+
+
+
+    <androidx.fragment.app.FragmentContainerView
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.list.SelectLocFragment" />
 
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/TrueLoc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="52dp"
+        android:text="Use real location"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
